--- a/Organized Work.ipynb
+++ b/Organized Work.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,6 +29,10 @@
     "#To extract the leading coefficient of the polynomial:\n",
     "def leadingcoff(poly):\n",
     "    return int(poly.c[0])\n",
+    "\n",
+    "#Takes derivative\n",
+    "def deriv(f):\n",
+    "    return np.polyder(f)\n",
     "\n",
     "#x^k generator\n",
     "#INPUT: k\n",
@@ -73,6 +77,15 @@
     "\n",
     "    return lst\n",
     "\n",
+    "def lstofmonicpolynomials(p, d):\n",
+    "    \n",
+    "    lst = []\n",
+    "    \n",
+    "    for coeffs in itertools.product(range(p), repeat = d):\n",
+    "        lst.append([1] + list(coeffs))\n",
+    "        \n",
+    "    return lst\n",
+    "\n",
     "#Performs polynomial long division\n",
     "def polydiv(f, g, p):\n",
     "    f = ZtoFq(f, p)\n",
@@ -96,67 +109,20 @@
     "        r = ZtoFq(r_new, p)\n",
     "\n",
     "    return (q, r)\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 75,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(poly1d([1., 1., 2., 3.]), poly1d([0.]))"
-      ]
-     },
-     "execution_count": 75,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "polydiv(poly([1, 3, 4, 2, 1]), poly([1,2]), 5)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 76,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "poly1d([0.])"
-      ]
-     },
-     "execution_count": 76,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "fasterquotientmap(poly([1,3,4,2,1]), poly([1,2]), 5)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 38,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "poly1d([2, 4, 6])"
-      ]
-     },
-     "execution_count": 38,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "2*poly([1,2,3])"
+    "\n",
+    "#INPUT: a polynomial in f in Z/pZ[x]\n",
+    "#OUTPUT: True if f is squarefree in Z/pZ[x], False else\n",
+    "def squarefree(f, p):\n",
+    "    \n",
+    "    g = ZtoFq(deriv(f), p)\n",
+    "    \n",
+    "    h = gcdfinder(f, g, p)[2]\n",
+    "    \n",
+    "    if deg(h) == 0:\n",
+    "        return True\n",
+    "    \n",
+    "    else:\n",
+    "        return False\n"
    ]
   },
   {
@@ -168,13 +134,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
     "import math\n",
     "\n",
     "# Applies the Euclidean Algorithm to compute the gcd of polynomials f and g in Z/pZ[x]\n",
+    "# The output array (u0, v0, r0) are the polynomials for f and g such that\n",
+    "#            u0*f + v0*g = r0\n",
+    "# If the inputs are coprime, then r0 will be a constant\n",
     "def gcdfinder(f, g, p):\n",
     "    r0 = f\n",
     "    r1 = g\n",
@@ -233,234 +202,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 163,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "False"
-      ]
-     },
-     "execution_count": 163,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "irreducible(poly([1, 1,3]), 5)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 161,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 161,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "polydiv(poly([2, 2, 12, 0]), poly([1, 0]), 13)[1] == np.poly1d([0])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 148,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[(0, 0),\n",
-       " (0, 1),\n",
-       " (0, 2),\n",
-       " (0, 3),\n",
-       " (0, 4),\n",
-       " (0, 5),\n",
-       " (0, 6),\n",
-       " (0, 7),\n",
-       " (0, 8),\n",
-       " (0, 9),\n",
-       " (0, 10),\n",
-       " (0, 11),\n",
-       " (0, 12),\n",
-       " (1, 0),\n",
-       " (1, 1),\n",
-       " (1, 2),\n",
-       " (1, 3),\n",
-       " (1, 4),\n",
-       " (1, 5),\n",
-       " (1, 6),\n",
-       " (1, 7),\n",
-       " (1, 8),\n",
-       " (1, 9),\n",
-       " (1, 10),\n",
-       " (1, 11),\n",
-       " (1, 12),\n",
-       " (2, 0),\n",
-       " (2, 1),\n",
-       " (2, 2),\n",
-       " (2, 3),\n",
-       " (2, 4),\n",
-       " (2, 5),\n",
-       " (2, 6),\n",
-       " (2, 7),\n",
-       " (2, 8),\n",
-       " (2, 9),\n",
-       " (2, 10),\n",
-       " (2, 11),\n",
-       " (2, 12),\n",
-       " (3, 0),\n",
-       " (3, 1),\n",
-       " (3, 2),\n",
-       " (3, 3),\n",
-       " (3, 4),\n",
-       " (3, 5),\n",
-       " (3, 6),\n",
-       " (3, 7),\n",
-       " (3, 8),\n",
-       " (3, 9),\n",
-       " (3, 10),\n",
-       " (3, 11),\n",
-       " (3, 12),\n",
-       " (4, 0),\n",
-       " (4, 1),\n",
-       " (4, 2),\n",
-       " (4, 3),\n",
-       " (4, 4),\n",
-       " (4, 5),\n",
-       " (4, 6),\n",
-       " (4, 7),\n",
-       " (4, 8),\n",
-       " (4, 9),\n",
-       " (4, 10),\n",
-       " (4, 11),\n",
-       " (4, 12),\n",
-       " (5, 0),\n",
-       " (5, 1),\n",
-       " (5, 2),\n",
-       " (5, 3),\n",
-       " (5, 4),\n",
-       " (5, 5),\n",
-       " (5, 6),\n",
-       " (5, 7),\n",
-       " (5, 8),\n",
-       " (5, 9),\n",
-       " (5, 10),\n",
-       " (5, 11),\n",
-       " (5, 12),\n",
-       " (6, 0),\n",
-       " (6, 1),\n",
-       " (6, 2),\n",
-       " (6, 3),\n",
-       " (6, 4),\n",
-       " (6, 5),\n",
-       " (6, 6),\n",
-       " (6, 7),\n",
-       " (6, 8),\n",
-       " (6, 9),\n",
-       " (6, 10),\n",
-       " (6, 11),\n",
-       " (6, 12),\n",
-       " (7, 0),\n",
-       " (7, 1),\n",
-       " (7, 2),\n",
-       " (7, 3),\n",
-       " (7, 4),\n",
-       " (7, 5),\n",
-       " (7, 6),\n",
-       " (7, 7),\n",
-       " (7, 8),\n",
-       " (7, 9),\n",
-       " (7, 10),\n",
-       " (7, 11),\n",
-       " (7, 12),\n",
-       " (8, 0),\n",
-       " (8, 1),\n",
-       " (8, 2),\n",
-       " (8, 3),\n",
-       " (8, 4),\n",
-       " (8, 5),\n",
-       " (8, 6),\n",
-       " (8, 7),\n",
-       " (8, 8),\n",
-       " (8, 9),\n",
-       " (8, 10),\n",
-       " (8, 11),\n",
-       " (8, 12),\n",
-       " (9, 0),\n",
-       " (9, 1),\n",
-       " (9, 2),\n",
-       " (9, 3),\n",
-       " (9, 4),\n",
-       " (9, 5),\n",
-       " (9, 6),\n",
-       " (9, 7),\n",
-       " (9, 8),\n",
-       " (9, 9),\n",
-       " (9, 10),\n",
-       " (9, 11),\n",
-       " (9, 12),\n",
-       " (10, 0),\n",
-       " (10, 1),\n",
-       " (10, 2),\n",
-       " (10, 3),\n",
-       " (10, 4),\n",
-       " (10, 5),\n",
-       " (10, 6),\n",
-       " (10, 7),\n",
-       " (10, 8),\n",
-       " (10, 9),\n",
-       " (10, 10),\n",
-       " (10, 11),\n",
-       " (10, 12),\n",
-       " (11, 0),\n",
-       " (11, 1),\n",
-       " (11, 2),\n",
-       " (11, 3),\n",
-       " (11, 4),\n",
-       " (11, 5),\n",
-       " (11, 6),\n",
-       " (11, 7),\n",
-       " (11, 8),\n",
-       " (11, 9),\n",
-       " (11, 10),\n",
-       " (11, 11),\n",
-       " (11, 12),\n",
-       " (12, 0),\n",
-       " (12, 1),\n",
-       " (12, 2),\n",
-       " (12, 3),\n",
-       " (12, 4),\n",
-       " (12, 5),\n",
-       " (12, 6),\n",
-       " (12, 7),\n",
-       " (12, 8),\n",
-       " (12, 9),\n",
-       " (12, 10),\n",
-       " (12, 11),\n",
-       " (12, 12)]"
-      ]
-     },
-     "execution_count": 148,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "lstofpolynomials(13, 2)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -469,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -496,27 +237,19 @@
     "        \n",
     "        f = randompoly(d, p)\n",
     "    \n",
+    "    return f\n",
+    "\n",
+    "#Generates a random squarefree polynomial of degree d in Z/pZ[x]\n",
+    "\n",
+    "def randomsquarefree(d, p):\n",
+    "    \n",
+    "    f = randompoly(d, p)\n",
+    "    \n",
+    "    while squarefree(f, p) == False:\n",
+    "        \n",
+    "        f = randompoly(d, p)\n",
+    "        \n",
     "    return f\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 106,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "poly1d([2, 0, 2, 5, 2])"
-      ]
-     },
-     "execution_count": 106,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "randomirreducible(4, 7)"
    ]
   },
   {
@@ -528,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -576,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -637,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -672,89 +405,142 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# L-function"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let $\\mathbb{F}_q$ be a finite field with characteristic $p$ and let $D(x) \\in \\mathbb{F}_q[x]$ be a monic, squarefree polynomial of degree $d.$ Let $R$ be the ring defined as\n",
+    "\n",
+    "$$R : = \\left\\{ a(x) + b(x) \\sqrt{D(x)} \\ : \\ a(x), b(x) \\in \\mathbb{F}_q[x] \\right\\}.$$\n",
+    "\n",
+    "Let $P(x)$ be an irreducible polynomial in $\\mathbb{F}_q[x]$ and $a(x) \\in \\mathbb{F}_q[x]$. Then we define the *Legendre Symbol* as\n",
+    "\n",
+    "$$\n",
+    "\\left( \\frac{a(x)}{P(x)} \\right) : =\n",
+    "\\begin{cases}\n",
+    "1, & \\text{if } P(x) \\nmid a(x) \\text{ and } a(x) \\text{ is a square modulo } P(x), \\\\\n",
+    "-1, & \\text{if } P(x) \\nmid a(x) \\text{ and } a(x) \\text{ is not a square modulo } P(x), \\\\\n",
+    "0, & \\text{if } P(x) \\mid a(x).\n",
+    "\\end{cases}\n",
+    "$$\n",
+    "\n",
+    "We also have an analog to the *Jacobi Symbol* with\n",
+    "\n",
+    "$$\\left( \\frac{a(x)}{b(x)} \\right) = \\prod_{j = 1}^r \\left( \\frac{a(x)}{Q_j(x)} \\right)^{\\alpha_j}$$\n",
+    "\n",
+    "where $a(x), b(x) \\in \\mathbb{F}_q[x]$ and $b(x) = Q_1(x)^{\\alpha_1} \\cdots Q_r(x)^{\\alpha_r}.$\n",
+    "\n",
+    "Furthermore, we have the quadratic reciprocity law for $a(x), b(x) \\in \\mathbb{F}_q[x]$, relatively prime, non-zero and monic\n",
+    "\n",
+    "$$\\left(\\frac{a(x)}{b(x)} \\right) \\left( \\frac{b(x)}{a(x)} \\right) = (-1)^{\\frac{|a| - 1}{2} \\frac{|b| - 1}{2}} = (-1)^{\\frac{q-1}{2} \\text{deg} a(x) \\cdot \\text{deg} b(x)}$$\n",
+    "\n",
+    "where $|f(x)| = q^{\\text{deg}f}.$\n",
+    "\n",
+    "For our sake, for polynomials $D(x), n(x) \\in \\mathbb{F}_q[x]$ we define the character\n",
+    "$$\\chi_D (n) : = \\left( \\frac{D(x)}{n(x)} \\right).$$\n",
+    "Additionally, as per usual, we define the *L-function* of $\\chi_D$ as\n",
+    "$$L(s, \\chi_D) : = \\sum_{\\substack{n \\in \\mathbb{F}_q[x], \\text{ monic} \\\\ \\text{deg}(n) \\geq 0}} \\frac{\\chi_D(n)}{|n|^s}$$\n",
+    "where $|n| = q^{\\text{deg} n}.$ By the definition of $|\\cdot|$, we can rearrange the sum to get\n",
+    "$$L(s, \\chi_D) = \\sum_{r = 0}^{\\infty} q^{-rs} \\sum_{\\substack{n \\in \\mathbb{F}_q[x], \\text{ monic} \\\\ \\text{deg }n = r}} \\chi_D(n).$$"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 85,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# the sum of the legendre symbol of polynomial D(x) of all monic polynomials in Z/pZ[x] of degree exactly r\n",
+    "\n",
+    "def innersum(D, r, p):\n",
+    "    \n",
+    "    summm = 0\n",
+    "    \n",
+    "    for item in lstofmonicpolynomials(p, r):\n",
+    "        \n",
+    "        summm = summm + legendresymbol(D, poly(item), p)\n",
+    "        \n",
+    "    return summm\n",
+    "\n",
+    "# The L-function with character \\chi_D\n",
+    "# This is so bad. It is way too slow\n",
+    "def Lfunction(s, D, p):\n",
+    "    \n",
+    "    summ = 0\n",
+    "    \n",
+    "    for r in range(0, deg(D) + 1):\n",
+    "        summ = summ + (p**(-r*s))*innersum(D, r, p)\n",
+    "    \n",
+    "    return summ\n",
+    "\n",
+    "\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      " \n",
-      "1\n",
-      " \n",
-      "2 x\n",
-      "True\n",
-      "3\n",
-      "1\n",
-      "1\n",
-      "True\n",
-      "   4     3     2\n",
-      "7 x + 5 x + 9 x + 12 x + 10\n",
-      "    3     2\n",
-      "15 x + 6 x + 9 x + 10\n",
-      "True\n",
-      "17\n",
-      "1\n",
-      "1\n",
-      "True\n",
-      "   5     4     3     2\n",
-      "8 x + 3 x + 9 x + 6 x + 1 x + 6\n",
-      " \n",
-      "2 x + 9\n",
-      "True\n",
-      "13\n",
-      "-1\n",
-      "-1\n",
-      "True\n",
-      " \n",
-      "4\n",
-      "    3     2\n",
-      "10 x + 3 x + 12 x + 11\n",
-      "True\n",
-      "13\n",
-      "1\n",
-      "1\n",
-      "True\n",
-      "   4     2\n",
-      "4 x + 2 x + 4 x + 3\n",
-      "   3     2\n",
-      "2 x + 1 x + 4 x + 1\n",
-      "True\n",
-      "5\n",
-      "1\n",
-      "1\n",
-      "True\n",
-      "   2\n",
-      "2 x + 2 x + 4\n",
-      " \n",
-      "1 x + 2\n",
-      "True\n",
-      "7\n",
-      "1\n",
-      "1\n",
-      "True\n",
-      "   5     4     3     2\n",
-      "1 x + 9 x + 2 x + 8 x + 7 x + 7\n",
-      "   3     2\n",
-      "5 x + 3 x + 8 x + 5\n",
-      "True\n",
-      "11\n",
-      "-1\n",
-      "-1\n",
-      "True\n",
-      " \n",
-      "13 x + 2\n",
-      "   5      4      3      2\n",
-      "7 x + 14 x + 15 x + 10 x + 8 x + 17\n",
-      "True\n",
-      "23\n",
-      "-1\n"
-     ]
+     "data": {
+      "text/plain": [
+       "poly1d([1, 0, 2, 1, 0, 2, 2, 0, 2])"
+      ]
+     },
+     "execution_count": 77,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "testlegendresymbol(30, 6)"
+    "randomirreducible(8, 3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 80,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "innersum(poly([1, 0, 2, 1, 0, 2, 2, 0, 2]), 8, 3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.15826968562831997"
+      ]
+     },
+     "execution_count": 84,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Lfunction(2, poly([1, 0, 2, 1, 0, 2, 2, 0, 2]), 3)"
    ]
   },
   {
