The last update from old computer

--- a/Organized Work.ipynb
+++ b/Organized Work.ipynb
@@ -9,12 +9,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import itertools\n",
+    "import scipy\n",
     "\n",
     "\n",
     "\n",
@@ -134,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -210,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -261,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -273,6 +274,9 @@
     "    h = makemonic(h, p)\n",
     "    \n",
     "    while True:\n",
+    "        \n",
+    "        if (deg(h) == 0) and (h != poly([0])):\n",
+    "            return 1\n",
     "        \n",
     "        f = fasterquotientmap(f, h, p)\n",
     "        \n",
@@ -301,6 +305,26 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "deg(poly([0]))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -309,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -370,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -452,7 +476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -474,38 +498,59 @@
     "    \n",
     "    summ = 0\n",
     "    \n",
-    "    for r in range(0, deg(D) + 1):\n",
+    "    D = makemonic(D, p)\n",
+    "    \n",
+    "    for r in range(0, deg(D)):\n",
     "        summ = summ + (p**(-r*s))*innersum(D, r, p)\n",
     "    \n",
     "    return summ\n",
     "\n",
-    "\n",
+    "#This will output the Lfunction for D as a polynomial\n",
+    "def polyLfunction(D, p):\n",
+    "    D = makemonic(D, p)\n",
+    "    d = deg(D)\n",
+    "    lst = []\n",
+    "    \n",
+    "    for r in range(0, d):\n",
+    "        \n",
+    "        lst.append(innersum(D, d - 1 - r, p))\n",
+    "        \n",
+    "    return poly(lst)\n",
     "        "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "poly1d([1, 0, 2, 1, 0, 2, 2, 0, 2])"
-      ]
-     },
-     "execution_count": 77,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Innersum: 0 1\n",
+      "1\n",
+      "Innersum: 1 -1\n",
+      "0\n",
+      "Innersum: 2 5\n",
+      "5\n",
+      "Innersum: 3 -5\n",
+      "0\n"
+     ]
     }
    ],
    "source": [
-    "randomirreducible(8, 3)"
+    "summ = 0\n",
+    "for k in range(0, 4):\n",
+    "    test = innersum(poly([1, 0, 2, 1, 3]), k, 5)\n",
+    "    print(\"Innersum:\", k, test)\n",
+    "    summ = summ + test\n",
+    "    print(summ)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -514,34 +559,250 @@
        "0"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "innersum(poly([1, 0, 2, 1, 0, 2, 2, 0, 2]), 8, 3)"
+    "Lfunction(0,poly([1, 0, 2, 1, 3]), 5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.15826968562831997"
+       "0"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "Lfunction(2, poly([1, 0, 2, 1, 0, 2, 2, 0, 2]), 3)"
+    "innersum(poly([1, 0, 2, 1, 3]), 5, 5)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "legendresymbol(poly([1, 0, 2, 1, 3]), poly([1]), 5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   6     5     4     3     2\n",
+      "1 x + 2 x + 3 x + 1 x + 4 x + 4 x\n"
+     ]
+    }
+   ],
+   "source": [
+    "f = randomsquarefree(6, 5)\n",
+    "print(f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "poly1d([1, 2, 3, 1, 4, 4, 0])"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "f"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "poly1d([-25,  20,   6,  -2,   0,   1])"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "g"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(poly1d([25.,  5., -1.,  1.,  1.]), poly1d([0.]))"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.polydiv(g, poly([-1, 1]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "poly1d([1, 1, 0, 3, 4, 4, 4])"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "makemonic(poly([3, 3, 0, 4, 2, 2, 2]), 5)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Using the Z_C"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "For a curve $C$ we can associate a zeta-function defined as\n",
+    "\n",
+    "$$Z_C(u) : = \\exp \\left( \\sum_{r =1}^{\\infty} N_r(C) \\frac{u^r}{r} \\right).$$\n",
+    "\n",
+    "Recall the usual moment problem of computing the sum\n",
+    "\n",
+    "$$ \\lim_{q \\to \\infty} \\frac{1}{\\# \\mathcal{H}_{q, d}} \\sum_{D(x) \\in \\mathcal{H}_{q, d}} L(1/2, \\chi_D)^k.$$\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def binomial(k, l):\n",
+    "    \n",
+    "    return (math.factorial(k)/(math.factorial(k - l)*math.factorial(l)))\n",
+    "\n",
+    "def c(k, l, q):\n",
+    "    \n",
+    "    if l > k:\n",
+    "        return 0\n",
+    "    \n",
+    "    solution = ((1 + q**2)**(k-l))*(q**(l/2))\n",
+    "    solution = solution*binomial(k,l)\n",
+    "    solution = solution*((-1)**l)\n",
+    "    \n",
+    "    if int(solution) == solution:\n",
+    "        \n",
+    "        return int(solution)\n",
+    "    \n",
+    "    else:\n",
+    "        \n",
+    "        return solution\n",
+    "\n",
+    "def fqkmaker(k, q):\n",
+    "    \n",
+    "    lst = []\n",
+    "    \n",
+    "    for l in range(0, k + 1):\n",
+    "    \n",
+    "        lst.append(c(k, k-l, q))\n",
+    "        \n",
+    "    return poly(lst)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "poly1d([   -27,   2214, -60516, 551368])"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fqkmaker(3, 9)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "25.0"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
   },
   {
    "cell_type": "code",
